docs: fixed Swagger incorrect API rubrics paths
